--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -30,7 +30,8 @@
     "featured": "🌟 精选推荐",
     "allTools": "🔧 所有工具",
     "categoryTools": "📂 {{category}}",
-    "toolCount": "({{count}} 个工具)"
+    "toolCount": "({{count}} 个工具)",
+    "searchResults": "🔍 搜索结果"
   },
   "buttons": {
     "tryNow": "立即体验",
@@ -39,7 +40,10 @@
   },
   "search": {
     "noResults": "没有找到匹配的工具",
-    "tryOther": "试试其他关键词或分类"
+    "tryOther": "试试其他关键词或分类",
+    "resultsFound": "为\"{{term}}\"找到{{count}}个工具",
+    "noResultsFor": "未找到\"{{term}}\"相关的工具",
+    "tryDifferent": "尝试使用不同的关键词搜索"
   },
   "footer": {
     "description": "发现和探索最新最优秀的人工智能工具，提升你的工作效率和创造力。",
